# kisan-ai

./: .cursorignore  .gitignore  .prettierignore  README.md  package-lock.json  package.json
.husky/: pre-commit
agents/: .gcloudignore  README.md  env.template  government_schemes_rag_plan.md  market_agent_v3_use_cases.md  pyproject.toml  setup_government_schemes.py  test_agents_comparison.py  test_government_schemes.py
agents/coordinator_agent/: agent.py
agents/crop_diagnosis_agent/: __init__.py  agent.py  deploy.py  deploy_improved.py  prompt.py
agents/general_query_agent/: agent.py
agents/government_schemes_agent/: README.md  __init__.py  agent.py  corpus_manager.py  corpus_setup.py  prompt.py  rag_manager.py  startup.py  test_corpus_setup.py  tools.py
agents/input_agent/: agent.py
agents/market_agent/: agent.py  cache_manager.py  prompt.py  startup.py  tools.py
agents/market_agent_simple/: agent.py  prompt.py  tools.py
agents/market_agent_v3/: __init__.py  agent.py
agents/rag_agent/: agent.py  prompt.py
backend/: .gcloudignore  README.md  env.template  pyproject.toml  test_filtered_endpoint.py
backend/app/: __init__.py  main.py
backend/app/agents/coordinator_agent/: agent.py
backend/app/agents/crop_diagnosis_agent/: __init__.py  agent.py  prompt.py
backend/app/agents/general_query_agent/: agent.py
backend/app/agents/market_agent/: agent.py  prompt.py  tools.py
backend/app/agents/rag_agent/: agent.py  prompt.py
backend/app/ai/agents/: __init__.py
backend/app/api/v1/: agent_invocation.py  crop_diagnosis.py  government_schemes.py  market_prices.py  speech.py  translation.py  voice_interface.py
backend/app/constants/: __init__.py  api_endpoints.py  constants.py  http_methods.py  market_data.py
backend/app/core/: config.py
backend/app/models/: __init__.py  agent_invocation.py  crop_diagnosis.py  government_schemes.py  market.py  speech.py  translation.py
backend/app/services/: __init__.py  diagnosis_service.py  government_rag_service.py  market_service.py  speech_service.py  translation_service.py
backend/app/utils/: api_client.py  http_client.py  logger.py
backend/app/utils/gcp/: __init__.py  firestore_client.py  gcp_manager.py  storage_client.py
backend/docs/: government_schemes_rag.md
backend/scripts/: bulk_data_loader.py  daily_data_sync.py  deploy_simple.sh  generate_historical_data.py  generate_historical_data_safe.py  karnataka_data_sync.py  lint.sh
backend/tests/: __init__.py  test_market_apis.py  test_upload.py
docs/: project_kisan_specification.md
docs/architecture/: kisan-ai-architecture.drawio.xml
frontend/: App.tsx  README.md  app.json  index.ts  package-lock.json  package.json  tailwind.config.js  types.d.ts
frontend/src/components/: BottomTabBar.tsx  FeatureCard.tsx  Header.tsx  LanguageSelector.tsx  NavigateBackButton.tsx  QuickActionButton.tsx  VoicePlayer.tsx  VoiceRecorder.tsx  index.ts
frontend/src/config/: app.ts  languages.ts
frontend/src/i18n/: LanguageContext.tsx  index.ts
frontend/src/i18n/locales/: en.json  hi.json  kn.json  od.json
frontend/src/screens/: CropHealthScreen.tsx  GovernmentSchemesScreen.tsx  HomeScreen.tsx  InstructionsScreen.tsx  MarketPricesScreen.tsx  VoiceChatScreen.tsx  index.ts
frontend/src/services/: aiService.ts  api.ts  baseApiService.ts  diagnosisService.ts  sessionService.ts  voiceChatService.ts
frontend/src/types/: index.ts  navigation.ts
(+2 files in other folders)
